Finish SpringBatch Expense Processor

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,10 +1,9 @@
-
-spring.profiles.active=dev
-spring.application.name=expenseConverter
+spring.application.name=PasswordManager
 spring.datasource.url=jdbc:postgresql://localhost:5432/Expense
 spring.datasource.username=username
 spring.datasource.password=password
 spring.datasource.driver-class-name=org.postgresql.Driver
+
 
 # Disable Hibernate auto schema update
 spring.jpa.hibernate.ddl-auto=none
@@ -24,8 +23,8 @@ app.security.jwt-refresh-key=file:config/jwt-refresh.key
 
 
 # Enable Liquibase
-spring.liquibase.enabled=false
+spring.liquibase.enabled=true
 spring.liquibase.change-log=file:db-changelog/changelog-master.sql
 
 
-server.port=8443
+server.port=8444
