Updated SpringBatch, cater for Convert Expenses to check for GST and Non GST Payments
Read from Database

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -11,7 +11,7 @@ spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.format_sql=true
-logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.SQL=FALSE
 logging.level.org.springframework.core.env=DEBUG
 
 
@@ -25,6 +25,5 @@ app.security.jwt-refresh-key=file:config/jwt-refresh.key
 # Enable Liquibase
 spring.liquibase.enabled=true
 spring.liquibase.change-log=file:db-changelog/changelog-master.sql
-
 
 server.port=8444
