Using MinIo the Bucket instead of Post CSV file, using listener to ensure after uploading to Minio bucket, process importJob
TODO: Clean up the code cause it's spaghetti

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -26,4 +26,13 @@ app.security.jwt-refresh-key=file:config/jwt-refresh.key
 spring.liquibase.enabled=true
 spring.liquibase.change-log=file:db-changelog/changelog-master.sql
 
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=exelbert2010@gmail.com
+spring.mail.password=aowyxlpgighiqlot
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
 server.port=8444
+minio.endpoint=${MINIO_ENDPOINT:http://localhost:9000}
+minio.access-key=${MINIO_ACCESS_KEY:ROOTNAME}
+minio.secret-key=${MINIO_SECRET_KEY:CHANGEME123}
