--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -8,7 +8,7 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 # Disable Hibernate auto schema update
 spring.jpa.hibernate.ddl-auto=none
 
-spring.jpa.show-sql=true
+spring.jpa.show-sql=FALSE
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.format_sql=true
 logging.level.org.hibernate.SQL=FALSE
